push for interview

--- a/src/index.html
+++ b/src/index.html
@@ -26,25 +26,11 @@ eleventyNavigation:
         We are licensed and insured and proud to let our reviews speak for themselves.  We look forward to working with you!
       </p>
       <a href="/contact" class="cs-button-solid">Contact Us</a>
-      <a href="#services" class="cs-button-transparent">
-        <!--
-        <img
-          class="cs-img"
-          loading="lazy"
-          decoding="async"
-          src="https://csimg.nyc3.digitaloceanspaces.com/Hero/play.svg"
-          alt="play icon"
-          width="17"
-          height="17"
-/>
-        -->
-        Learn More
-      </a>
     </div>
   </div>
 
   <!-- Background Image -->
-  {% image './src/images/img17.jpg', 'mountains', 'cs-picture', 'eager', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+  {% image './src/images/limg26.jpg', 'mountains', 'cs-picture', 'eager', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
 <!-- ============================================ -->
@@ -58,7 +44,7 @@ eleventyNavigation:
       <img
         aria-hidden="true"
         decoding="async"
-        src="/assets/svgs/service1.svg"
+        src="/assets/images/hand-saw.png"
         alt="appliance"
         width="48"
         height="48"
@@ -74,7 +60,7 @@ eleventyNavigation:
       <img
         aria-hidden="true"
         decoding="async"
-        src="/assets/svgs/service2.svg"
+        src="/assets/svgs/service1.svg"
         alt="appliance"
         width="48"
         height="48"
@@ -90,7 +76,7 @@ eleventyNavigation:
       <img
         aria-hidden="true"
         decoding="async"
-        src="/assets/svgs/service3.svg"
+        src="/assets/images/painting.png"
         alt="appliance"
         width="48"
         height="48"
@@ -128,14 +114,12 @@ eleventyNavigation:
       <p class="cs-text">
         We eagerly anticipate the opportunity to work with you, turning your dreams into tangible achievements. Let's create something incredible together!
       </p>
-      <!--
       <div class="cs-flex-group">
         <p class="cs-flex-p">
-          In consequat tincidunt turpis sit amet imperdiet. Praesent Classei consequat tincidunt turpis sit amet
-          imperdiet for mind.
+          "Quote here"
         </p>
-        <span class="cs-name">Justin Time</span>
-        <span class="cs-job">CEO-Founder</span>
+        <span class="cs-name">Miro and Susan</span>
+        <span class="cs-job">Owners</span>
         <img
           class="cs-quote-icon"
           loading="lazy"
@@ -146,7 +130,6 @@ eleventyNavigation:
           height="77"
 />
       </div>
-    -->
         <a href="/contact" class="button-solid">Contact Us</a>
     </div>
   </div>
@@ -197,7 +180,7 @@ eleventyNavigation:
       <!-- Row 1-->
       <div class="cs-row cs-row-1">
         {% image './src/images/portfolio/img1.jpg', 'new hallway', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/img19.jpg', 'new home construction', 'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
+        {% image './src/images/limg49.jpg', 'new home construction', 'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
         {% image './src/images/portfolio/img12.jpg', 'building a new wall', 'cs-picture cs-picture-3', 'lazy', '(max-width: 600px) 200px, 400px'%}
         <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
       </div>
@@ -210,9 +193,9 @@ eleventyNavigation:
       </div>
       <!-- Row 3 -->
       <div class="cs-row cs-row-3">
-        {% image './src/images/portfolio/img15.jpg', 'new kitchen', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
+        {% image './src/images/limg32.jpg', 'new kitchen', 'cs-picture cs-picture-1', 'lazy', '(max-width: 600px) 200px, 400px'%}
         {% image './src/images/portfolio/img25.jpg', 'apartment addition', 'cs-picture cs-picture-2', 'lazy', '(max-width: 600px) 200px, 400px'%}
-        {% image './src/images/portfolio/img6.jpg', 'kew kitchen cabinets', 'cs-picture cs-picture-3', 'lazy', '(max-width: 600px) 200px, 400px'%}
+        {% image './src/images/limg51.jpg', 'kew kitchen cabinets', 'cs-picture cs-picture-3', 'lazy', '(max-width: 600px) 200px, 400px'%}
 
         <!-- To add more images, copy and paste this row's picture tags here in order from cs-picture-1 to cs-picture-3 and they will maintain the same layout-->
       </div>
